--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,7 +32,7 @@ a {
 .img-fluid {
 	width: 100%;
 	height: 100vh;
-	background-image: url('../A1.jpg');
+	background-image: url('/img1/A1.jpg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -441,7 +441,7 @@ background: linear-gradient(90deg, rgba(176,176,176,1) 13%, rgba(176,176,176,1) 
 
 
 footer {
-	background: url(/A3.jpg);
+	background: url(/img1/A3.jpg);
 	width: 100%;
 }
 
